--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <nav> 
             
             <a style="float: left; display:inline; color: rgb(106, 45, 163) ;font-family: Mistral;font-size: 30px;text-decoration:none;" 
-            href="products.html"> 
+            href="Products.html"> 
             &nbsp &nbsp &nbsp 
             Products</a>
             
