--- a/tips.html
+++ b/tips.html
@@ -81,7 +81,7 @@
     <nav> 
         
         <a style="color: rgb(106, 45, 163) ;float: left; display:inline; font-family: Mistral;font-size: 30px;text-decoration:none;" 
-        href="products.html"> 
+        href="Products.html"> 
         &nbsp &nbsp &nbsp 
         Products</a>
         
