--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profiterole Recipe </title>
     
+<link rel="stylesheet" href="productsStyle.css" type="text/css">
 
 </head>
 
